--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - sonar-scanner
   - ./mvnw clean install
 
 
