--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.organization=edin0
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=https://github.com/edin0/Groupe-1-test
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
