--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,11 @@ script:
 
 
 
-
 jobs:
   include:
     - stage: Test
-      script: ./mvnw clean test
+      script: 
+        - ./mvnw clean test
 
 git:
   depth: 1
