--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ language: python
 env:
   - NODE_VERSION="12.13.1"
 
-services:
-  - docker
+#services:
+#  - docker
 
 jdk:
   - openjdk11
@@ -42,10 +42,10 @@ jobs:
       - npm install
       - npm update
       - npm run-script build --prod
-      - docker build -t unige/web-ui .
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin      
-      - docker tag unige/web-ui edin0/web-ui:latest      
-      - docker push edin0/web-ui:latest
+      #- docker build -t unige/web-ui .
+      #- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin      
+      #- docker tag unige/web-ui edin0/web-ui:latest      
+      #- docker push edin0/web-ui:latest
 
     - stage: Test
       script: ./mvnw clean test
